# lite-physics

./: .gitignore  CMakeLists.txt  README.md
code/: CMakeLists.txt
code/Apps/: basic.cpp  ccd.cpp  convex.cpp  multi.cpp
code/Math/: Helpers.cpp  Helpers.h  Quat.h  Vector.h
code/Physics/: Body.cpp  Body.h  Broadphase.cpp  Broadphase.h  Contact.cpp  Contact.h  GJK.cpp  GJK.h  Intersections.cpp  Scene.cpp  Scene.h  Shapes.h
code/Physics/Shapes/: ShapeBase.cpp  ShapeBase.h  ShapeBox.cpp  ShapeBox.h  ShapeConvex.cpp  ShapeConvex.h  ShapeFactory.cpp  ShapeFactory.h  ShapePlane.cpp  ShapePlane.h  ShapeSphere.cpp  ShapeSphere.h
code/Renderer/: Descriptor.h  Fileio.cpp  FrameBuffer.cpp  OffscreenRenderer.cpp  SwapChain.cpp  application.cpp  application.h  model.cpp  model.h  shader.cpp
test/: CMakeLists.txt
test/gjk/: main.cpp
